# TabSurvey

./: model_Adult_DeepFM_test.pt  pyproject.toml  requirements.txt  requirements2.txt  requirements3.txt  train.py  trainall.sh
config/: ctu_13_neris.yml  lcld_v2_time.yml  malware.yml  url.yml  wids-cpu.yml  wids.yml
models/: __init__.py  basemodel_torch.py  deepfm.py  mlp_rln.py  rln.py  saint.py  tabtransformer.py  vime.py
output_final/: model_Adult_LinearModel_final.pt  model_ctu_13_neris_CatBoost_final.pt  model_ctu_13_neris_CatBoost_params.json  model_ctu_13_neris_LinearModel_final.pt  model_lcld_v2_time_CatBoost_params.json  model_malware_CatBoost_final.pt  model_malware_CatBoost_params.json  model_url_CatBoost_final.pt  model_url_CatBoost_params.json  model_url_TORCHRLN_final.pt  model_url_TORCHRLN_params.json  model_wids_CatBoost_params.json  model_wids_DecisionTree_final.pt  model_wids_DecisionTree_params.json  model_wids_DeepFM_final.pt  model_wids_DeepFM_params.json  model_wids_KNN_params.json  model_wids_LightGBM_final.pt  model_wids_LightGBM_params.json  model_wids_ModelTree_final.pt  model_wids_ModelTree_params.json  model_wids_RandomForest_final.pt  model_wids_RandomForest_params.json  model_wids_TORCHRLN_final.pt  model_wids_TORCHRLN_params.json  model_wids_TabTransformer_final.pt  model_wids_TabTransformer_params.json  model_wids_XGBoost_final.pt  model_wids_XGBoost_params.json
utils/: comet.py  io_utils.py  load_data.py  losses.py  parser.py
