[tool.poetry]
name = "tabsurvey"
version = "0.1.0"
description = ""
authors = ["Antoine Desjardins <44445863+boumpteryx@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
scikit-learn = "^1.1.2"
torch = "^1.12.1"
pytorch-tabnet = "^4.0"
optuna = {git = "https://github.com/optuna/optuna.git"}
pandas = "^1.5.1"
constrained-attacks = {git = "https://github.com/serval-uni-lu/constrained-attacks.git", branch="fast_moeva"}
requests = "^2.28.1"
ConfigArgParse = "^1.5.3"
xgboost = "^1.6.2"
catboost = "^1.1"
lightgbm = "^3.3.3"
modeltrees = {git = "https://github.com/schufa-innovationlab/model-trees"}
einops = "^0.5.0"
keras = "^2.10.0"
tensorflow = "^2.10.0"
qhoptim = "^1.1.0"
lifelines = "^0.27.3"
pytorch-lightning = "^1.8.0"
nam = "^0.0.3"
yacs = "^0.1.8"
comet-ml = "^3.31.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
